-미션5 기능 테스트 진행함.  ㄴ postman 활용, 모든 기능 동작 확인됨  ㄴ API 연결 테스트.   ㄴ 로그인 ok   ㄴ 참여중인 유저 목록 뷰 ok   ㄴ 메세지 작성 ok / 메세지 내용,작성자가 뷰에서 확인 안됨   ㄴ 공개채널 작성 불가 등 오류 발견.